--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1298,7 +1298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plotting a pitch"
+    "#### Drawing a pitch"
    ]
   },
   {
